[package]
name = "pseudo_bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aa_bundler_primitives = { git = "https://github.com/Vid201/aa-bundler.git", rev="25e26da", package = "aa-bundler-primitives" }
anyhow = "1.0.71"
env_logger = "0.10.0"
ethers = "2.0.7"
log = "0.4.19"
